# ustack-logging

./: README.md  circle.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
stubs/datadog_logger/: __init__.pyi
stubs/kubernetes/client/: __init__.pyi
stubs/kubernetes/config/: __init__.pyi
tests/: test_ustack_logging.py
ustack_logging/: logging_configuration.py
