[tool.poetry]
name = "ustack-logging"
version = "1.0.1"
description = "Default logging configuration for uStack style Python applications."
authors = ["uStudio Developers <dev@ustudio.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ustack_logging"}]

[tool.poetry.dependencies]
python = "^3.9"
datadog-logger = "^1.0.1"
datadog = ">=0.45.0"
kubernetes = ">=26.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
